@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR
skinparam classBackgroundColor MODEL_COLOR

' Main entities
class AddressBook
class UniquePersonList
class UniqueAnimalList
class UniqueTagList
class Tag
class Person
class Animal
class PersonName
class AnimalName
class Phone
class Email
class Description
class Location
class FeedingSession

' Layout helpers
AddressBook -[hidden]down-> UniqueTagList
UniquePersonList -[hidden]down-> Person
UniqueAnimalList -[hidden]down-> Animal
UniqueTagList -[hidden]down-> Tag

' Relationships
AddressBook *-right-> "1" UniquePersonList
AddressBook *-down-> "1" UniqueAnimalList
AddressBook *-left-> "1" UniqueTagList

UniquePersonList -right-> Person
UniqueAnimalList -right-> Animal
UniqueTagList -down-> Tag

Person -up-> "*" Tag
Animal -up-> "*" Tag

Person *--> PersonName
Person *--> Phone
Person *--> Email
Person *--> "*" FeedingSession

Animal *--> AnimalName
Animal *--> Description
Animal *--> Location

@enduml
